# smyo-website

./: .gitignore  package-lock.json  package.json  tailwind.config.js
public/assets/docs/: akademik_takvim.docx  cu_yonetmeligi.docx  proje_yazim_kurallari.docx  yok_yonetmeligi.docx
public/css/: styles.css
public/pages/: add_announcement.html  add_article.html  add_user.html  admin.html  announcements.html  articles.html  contact.html  dashboard.html  dokuman.html  duyurular.html  edit_announcement.html  edit_article.html  edit_user.html  gallery.html  icerik.html  index.html  main.html  main_content.html  makaleler.html  messages.html  personel.html  programlar.html  styles.html  user.html  user_list.html  users.html
server/: Cargo.toml  main.rs
server/db/: database.db  init.js
server/src/: admin.rs  announcements.rs  articles.rs  contact.rs  db.rs  docs.rs  duyurular.rs  index.rs  main_content.rs  mod.rs  personel.rs  programlar.rs  slider.rs
src/: output.css
