[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.5.4"
actix-files = "0.6.2"
actix-identity = "0.6.0"
actix-multipart = "0.6.1"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4.4.0"
env_logger = "0.11.2"
futures = "0.3.30"
jsonwebtoken = "9.2.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
sanitize-filename = "0.5.0"
serde = "1.0.193"
serde_derive = "1.0.193"
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }

[[bin]]
name = "server"
path = "main.rs"
